[PHOENIX-2276] Username dropdown overflow issue fixed

--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.less
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.less
@@ -248,6 +248,10 @@ b, label, strong{
             outline: none;
         }
         
+        a.profile-name{
+        	white-space: nowrap;overflow: hidden;width:120px;text-overflow: ellipsis;
+        }
+        
     }
     
     ul.nav > li.menu-responsive {
@@ -324,6 +328,7 @@ b, label, strong{
                         padding: 0 5px;
                     }
                 }
+                
             }
         }
     }
